@@ -78,6 +78,15 @@
     />
 
   <browser:page
+    for="..interfaces.IProject"
+    name="dashboard"
+    layer="..interfaces.IBrowserLayer"
+    permission="plone.app.portlets.ViewDashboard"
+    class=".dashboard.DashboardView"
+    template="templates/dashboard.pt"
+    />
+
+  <browser:page
     for="plone.app.layout.navigation.interfaces.INavigationRoot"
     name="mytickets"
     class=".dashboard.MyTickets"
