@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- added project dashboard view [gborelli]
+- added IMyStoriesLIsting adapter [gborelli]
 - changed dashboard view [gborelli]
 - added IStoryListing adapter for INavigationRoot [gborelli]
 - moved to collective namespace [simahawk]
